Update social media links in footer

--- a/index.html
+++ b/index.html
@@ -579,14 +579,14 @@
               </p>
             
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate">
+                <!--<li class="ftco-animate">
                   <a href="https://facebook.com/g63rentalcar" target="_blank"><span class="icon-facebook"></span></a>
+                </li>-->
+                <li class="ftco-animate">
+                  <a href="https://www.instagram.com/ghali45000/#" target="_blank"><span class="icon-instagram"></span></a>
                 </li>
                 <li class="ftco-animate">
-                  <a href="https://instagram.com/g63rentalcar" target="_blank"><span class="icon-instagram"></span></a>
-                </li>
-                <li class="ftco-animate">
-                  <a href="https://twitter.com/g63rentalcar" target="_blank"><span class="icon-twitter"></span></a>
+                  <a href="https://www.tiktok.com/@g.z.z70" target="_blank"><span class="icon-tiktok"></span></a>
                 </li>
               </ul>
             </div>
