Replace social media icons with Font Awesome versions
Updated social media icons to use Font Awesome brands.

--- a/index.html
+++ b/index.html
@@ -583,10 +583,10 @@
                   <a href="https://facebook.com/g63rentalcar" target="_blank"><span class="icon-facebook"></span></a>
                 </li>-->
                 <li class="ftco-animate">
-                  <a href="https://www.instagram.com/ghali45000/#" target="_blank"><span class="icon-instagram"></span></a>
+                  <a href="https://www.instagram.com/ghali45000/#" target="_blank"><span class="fa-brands fa-instagram"></span></a>
                 </li>
                 <li class="ftco-animate">
-                  <a href="https://www.tiktok.com/@g.z.z70" target="_blank"><span class="icon-tiktok"></span></a>
+                  <a href="https://www.tiktok.com/@g.z.z70" target="_blank"><span class="fa-brands fa-tiktok"></span></a>
                 </li>
               </ul>
             </div>
